website/src/scss/_base.scss
@import 'reset';

h1, h2, h3, p, span {
  font-family: 'Open Sans', Helvetica, sans-serif;
}
h1 {
  font-size: 4.5em;
  font-weight: 700;
}
h2 {
  font-size: 1.5em;
  font-weight: 300;
}

.blinkAnimation {
  animation: blinker 2s ease-in-out infinite;
}

.box {
  display: flex;
}
@keyframes blinker {
  50% { opacity: 0; }
}

@media(max-width: 700px ){
  .box{
    display: none;
  }
}

